# mcp

./: README.md  requirements.txt
inventory-mcp/: .gcloudignore  Dockerfile  README.md  pyproject.toml  requirements.txt
inventory-mcp/inventory_mcp/: server.py
inventory-mcp/tests/: conftest.py  test_server.py
psh-mcp/: Dockerfile  README.md  pyproject.toml
psh-mcp/psh_mcp/: server.py
psh-mcp/tests/: conftest.py  test_transform.py
psh_mcp/: server.py
tests/: test_server.py
