[project]
name = "inventory-mcp"
version = "0.1.0"
description = "MCP server for Google Cloud Asset Inventory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "google-cloud-asset>=3.20.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
